--- a/uikit/extensions/particle/built-ins/snowcat.particle.fire.plist
+++ b/uikit/extensions/particle/built-ins/snowcat.particle.fire.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>90</real>
+	<real>244.11000061035156</real>
 	<key>angleVariance</key>
-	<real>10</real>
+	<real>360</real>
 	<key>blendFuncDestination</key>
 	<integer>1</integer>
 	<key>blendFuncSource</key>
@@ -13,96 +13,96 @@
 	<key>duration</key>
 	<real>-1</real>
 	<key>emitterType</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorAlpha</key>
-	<real>1</real>
+	<real>0.0</real>
 	<key>finishColorBlue</key>
-	<real>1</real>
+	<real>0.30000001192092896</real>
 	<key>finishColorGreen</key>
-	<real>1</real>
+	<real>0.46000000834465027</real>
 	<key>finishColorRed</key>
 	<real>1</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishParticleSize</key>
-	<real>0</real>
-	<key>finishParticleSizeVariance</key>
-	<real>0</real>
-	<key>gravityx</key>
-	<real>0</real>
-	<key>gravityy</key>
-	<real>-750</real>
-	<key>maxParticles</key>
-	<real>1000</real>
-	<key>maxRadius</key>
 	<real>100</real>
+	<key>finishParticleSizeVariance</key>
+	<real>0.0</real>
+	<key>gravityx</key>
+	<real>0.0</real>
+	<key>gravityy</key>
+	<real>100</real>
+	<key>maxParticles</key>
+	<real>500</real>
+	<key>maxRadius</key>
+	<real>60.630001068115234</real>
 	<key>maxRadiusVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>minRadius</key>
-	<real>0</real>
+	<real>3.1600000858306885</real>
 	<key>particleLifespan</key>
-	<real>1.907899975776672</real>
+	<real>1</real>
 	<key>particleLifespanVariance</key>
-	<real>0.8553000092506409</real>
+	<real>0.5</real>
 	<key>radialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>radialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotatePerSecond</key>
-	<real>0</real>
+	<real>360</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0</real>
+	<real>125.52999877929688</real>
 	<key>rotationEnd</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEndVariance</key>
-	<real>0</real>
+	<real>-50</real>
 	<key>rotationStart</key>
-	<real>0</real>
-	<key>rotationStartVariance</key>
-	<real>0</real>
-	<key>sourcePositionVariancex</key>
-	<real>7</real>
-	<key>sourcePositionVariancey</key>
-	<real>7</real>
-	<key>sourcePositionx</key>
-	<real>160</real>
-	<key>sourcePositiony</key>
 	<real>50</real>
+	<key>rotationStartVariance</key>
+	<real>0.0</real>
+	<key>sourcePositionVariancex</key>
+	<real>384</real>
+	<key>sourcePositionVariancey</key>
+	<real>0.0</real>
+	<key>sourcePositionx</key>
+	<real>384</real>
+	<key>sourcePositiony</key>
+	<real>-3.119999885559082</real>
 	<key>speed</key>
-	<real>703.9500122070312</real>
+	<real>0.0</real>
 	<key>speedVariance</key>
-	<real>30</real>
+	<real>0.0</real>
 	<key>startColorAlpha</key>
 	<real>1</real>
 	<key>startColorBlue</key>
-	<real>1</real>
+	<real>0.0</real>
 	<key>startColorGreen</key>
-	<real>0</real>
+	<real>0.2199999988079071</real>
 	<key>startColorRed</key>
-	<real>0</real>
+	<real>0.79000002145767212</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0</real>
+	<real>1</real>
 	<key>startColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startParticleSize</key>
-	<real>35.79000091552734</real>
+	<real>50</real>
 	<key>startParticleSizeVariance</key>
-	<real>5</real>
+	<real>53.470001220703125</real>
 	<key>tangentialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>tangentialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>textureFileName</key>
-	<string>snowcat.particle.spot.png</string>
+	<string>snowcat.particle.fire.png</string>
 </dict>
 </plist>
