--- a/uikit/extensions/particle/built-ins/snowcat.particle.water.plist
+++ b/uikit/extensions/particle/built-ins/snowcat.particle.water.plist
@@ -3,106 +3,106 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>90</real>
+	<real>0.0</real>
 	<key>angleVariance</key>
-	<real>10</real>
+	<real>0.0</real>
 	<key>blendFuncDestination</key>
-	<integer>1</integer>
+	<integer>772</integer>
 	<key>blendFuncSource</key>
 	<integer>770</integer>
 	<key>duration</key>
 	<real>-1</real>
 	<key>emitterType</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorAlpha</key>
-	<real>1</real>
+	<real>0.0</real>
 	<key>finishColorBlue</key>
-	<real>1</real>
+	<real>0.23000000417232513</real>
 	<key>finishColorGreen</key>
-	<real>1</real>
+	<real>0.14000000059604645</real>
 	<key>finishColorRed</key>
-	<real>1</real>
+	<real>0.0</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>finishParticleSize</key>
-	<real>0</real>
+	<real>131.3699951171875</real>
 	<key>finishParticleSizeVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>gravityx</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>gravityy</key>
-	<real>-750</real>
+	<real>-276.32000732421875</real>
 	<key>maxParticles</key>
-	<real>1000</real>
+	<real>2000</real>
 	<key>maxRadius</key>
 	<real>100</real>
 	<key>maxRadiusVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>minRadius</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>particleLifespan</key>
-	<real>1.907899975776672</real>
+	<real>0.72369998693466187</real>
 	<key>particleLifespanVariance</key>
-	<real>0.8553000092506409</real>
+	<real>0.065800003707408905</real>
 	<key>radialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>radialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotatePerSecond</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEnd</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationEndVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStart</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>rotationStartVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>sourcePositionVariancex</key>
-	<real>7</real>
+	<real>1088</real>
 	<key>sourcePositionVariancey</key>
-	<real>7</real>
+	<real>100</real>
 	<key>sourcePositionx</key>
-	<real>160</real>
+	<real>485</real>
 	<key>sourcePositiony</key>
-	<real>50</real>
+	<real>278.58999633789062</real>
 	<key>speed</key>
-	<real>703.9500122070312</real>
+	<real>4</real>
 	<key>speedVariance</key>
-	<real>30</real>
+	<real>0.0</real>
 	<key>startColorAlpha</key>
-	<real>1</real>
+	<real>0.10000000149011612</real>
 	<key>startColorBlue</key>
-	<real>1</real>
+	<real>0.81000000238418579</real>
 	<key>startColorGreen</key>
-	<real>0</real>
+	<real>0.18999999761581421</real>
 	<key>startColorRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startColorVarianceRed</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>startParticleSize</key>
-	<real>35.79000091552734</real>
+	<real>165.05000305175781</real>
 	<key>startParticleSizeVariance</key>
-	<real>5</real>
+	<real>3.369999885559082</real>
 	<key>tangentialAccelVariance</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>tangentialAcceleration</key>
-	<real>0</real>
+	<real>0.0</real>
 	<key>textureFileName</key>
-	<string>snowcat.particle.spot.png</string>
+	<string>snowcat.particle.water.png</string>
 </dict>
 </plist>
